# leviculum

./: .gitignore  .gitmodules  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  CLEANUP_NOTES.md  CLEANUP_REPORT.md  Cargo.toml  Justfile  README.md  ROADMAP.md  ROUND2_STATUS.md  rust-toolchain.toml
doc/: ISSUES.md  (+38 more)
libreticulum-cli/: Cargo.toml
libreticulum-cli/src/: lrns.rs  lrnsd.rs
libreticulum-core/: Cargo.toml
libreticulum-core/src/: destination.rs  identity.rs  lib.rs  link.rs  packet.rs  resource.rs  transport.rs
libreticulum-core/src/crypto/: aes_cbc.rs  hashes.rs  hkdf_impl.rs  hmac_impl.rs  mod.rs  token.rs
libreticulum-core/tests/: proptest_crypto.rs  test_vectors.rs
libreticulum-ffi/: Cargo.toml  cbindgen.toml
libreticulum-ffi/src/: lib.rs
reticulum-cli/: Cargo.toml  build.rs
reticulum-cli/src/: cp.rs  lncp.rs  lns.rs  lnsd.rs  lrncp.rs  lrns.rs  lrnsd.rs  selftest.rs
reticulum-core/: Cargo.toml
reticulum-core/src/: announce.rs  compression.rs  constants.rs  destination.rs  embedded_storage.rs  hex_fmt.rs  identity.rs  identity_store.rs  ifac.rs  known_destinations.rs  lib.rs  link.rs  memory_storage.rs  packet.rs  packet_hash_store.rs  ratchet.rs  ratchet_store.rs  receipt.rs  resource.rs  rnode.rs  storage_types.rs  test_utils.rs  traits.rs  transport.rs
reticulum-core/src/crypto/: aes_cbc.rs  hashes.rs  hkdf_impl.rs  hmac_impl.rs  mod.rs  random.rs  token.rs
reticulum-core/src/framing/: ble.rs  hdlc.rs  kiss.rs  mod.rs
reticulum-core/src/link/: manager.rs  mod.rs
reticulum-core/src/node/: builder.rs  connection.rs  event.rs  link_management.rs  mod.rs  request.rs  send.rs
reticulum-core/src/resource/: compression.rs  hashmap.rs  incoming.rs  mod.rs  msgpack.rs  outgoing.rs
reticulum-core/tests/: compression_vectors.rs  proptest_crypto.rs  test_vectors.rs
reticulum-core/tests/vectors/: bz2_vectors.json
reticulum-ffi/: Cargo.toml  build.rs  cbindgen.toml
reticulum-ffi/c_tests/: test_identity.c
reticulum-ffi/src/: lib.rs
reticulum-ffi/tests/: ffi_c_tests.rs
reticulum-integ/: Cargo.toml  Dockerfile  entrypoint.sh
reticulum-integ/scripts/: padded_announce.py  probe_benchmark.py  python_link_check_running.sh  python_link_responder_bg.sh  python_link_selftest.py
reticulum-integ/src/: compose.rs  executor.rs  lib.rs  lock.rs  main.rs  paths.rs  runner.rs  topology.rs
reticulum-integ/tests/: announce_replacement.toml  basic_probe.toml  bench_dual_pair_fast.toml  bench_dual_pair_medium.toml  bench_dual_pair_medium_ca.toml  bench_dual_pair_slow.toml  bench_dual_pair_slow_ca.toml  bench_single_pair_fast.toml  bench_single_pair_medium.toml  bench_single_pair_medium_ca.toml  bench_single_pair_medium_ca_rnode_only.toml  bench_single_pair_medium_rnode_only.toml  bench_single_pair_slow.toml  bench_single_pair_slow_ca.toml  bench_single_pair_slow_ca_rnode_only.toml  double_restart_identity_persistence.toml  e30_repro.toml  e31_repro.toml  five_node_mesh.toml  four_node_chain.toml  ifac_basic_probe.toml  ifac_mixed_links.toml  ifac_rust_relay.toml  ifac_through_relay.toml  link_failure_recovery.toml  lncp_auth.toml  lncp_auth_reject.toml  lncp_baseline.toml  lncp_fetch.toml  lncp_fetch_auth.toml  lncp_fetch_cross.toml  lncp_fetch_jail.toml  lncp_full_rust.toml  lncp_rust_edges.toml  lncp_rust_sender.toml  lora_3node_bidir.toml  lora_3node_contention.toml  lora_3node_transfer.toml  lora_4node_contention.toml  lora_4node_contention_mixed.toml  (+97 more)
reticulum-net/: Cargo.toml
reticulum-net/src/: lib.rs
reticulum-nrf/: .gitignore  Cargo.toml  README.md  T114-BRINGUP.md  memory.x
reticulum-nrf/.cargo/: config.toml
reticulum-nrf/src/: baseboard.rs  battery.rs  ble.rs  button.rs  clock.rs  display.rs  flash.rs  gnss.rs  interface.rs  led.rs  lib.rs  log.rs  lora.rs  rng.rs  sx1262.rs  usb.rs
reticulum-nrf/src/boards/: mod.rs  rak4631.rs  t114.rs
reticulum-nrf/tests/: on_device.rs
reticulum-nrf/tools/: bin2uf2.rs  flash-and-read.sh  uf2-runner.sh
reticulum-nrf/udev/: 99-leviculum.rules  99-libreticulum.rules
reticulum-proxy/: Cargo.toml
reticulum-proxy/src/: control.rs  forward.rs  lib.rs  main.rs  pty.rs  rules.rs
reticulum-proxy/tests/: proxy_control.rs
reticulum-std/: Cargo.toml
reticulum-std/examples/: chat.rs  echo_server.rs  link_integration_test.rs  link_test.rs  relay_daemon.rs  simple_send.rs
reticulum-std/src/: buffer.rs  clock.rs  config.rs  error.rs  file_identity_store.rs  file_known_destinations_store.rs  file_packet_hash_store.rs  file_ratchet_store.rs  ini_config.rs  known_destinations.rs  lib.rs  packet_hashlist.rs  reticulum.rs  runtime.rs  storage.rs
reticulum-std/src/driver/: builder.rs  endpoint.rs  mod.rs  sender.rs  stream.rs
reticulum-std/src/interfaces/: airtime.rs  hdlc.rs  local.rs  mod.rs  rnode.rs  serial.rs  tcp.rs  traits.rs  udp.rs
reticulum-std/src/node/: builder.rs  mod.rs  stream.rs
reticulum-std/src/rpc/: connection.rs  error.rs  handlers.rs  mod.rs  pickle.rs
reticulum-std/tests/: rnsd_interop.rs
reticulum-std/tests/mvr/: interface_tx_spacing.rs  link_failure_recovery_silent_resume.rs  lncp_fetch_rust_responder.rs  main.rs  rust_client_path_install_from_python.rs  rust_client_path_install_loop_race.rs  rust_client_path_install_via_relay.rs  rust_client_path_install_with_own_echo.rs  scheduler_alignment.rs
reticulum-std/tests/rnsd_interop/: announce.rs  announce_interop_tests.rs  auto_interop_tests.rs  basic.rs  channel_tests.rs  common.rs  comprehensive_network_test.rs  crypto.rs  daemon_tests.rs  discovery_tests.rs  edge_case_tests.rs  encryption_tests.rs  flood_tests.rs  flow_tests.rs  harness.rs  lifecycle_tests.rs  link.rs  link_keepalive_close_tests.rs  link_manager_tests.rs  link_tests.rs  main.rs  mtu_tests.rs  multihop_tests.rs  node_api_tests.rs  path_gap_tests.rs  path_recovery_tests.rs  plain_broadcast_tests.rs  probe_tests.rs  proof_tests.rs  protocol.rs  protocol_tests.rs  python_parity_tests.rs  ratchet_rotation_tests.rs  ratchet_tests.rs  relay_integration_tests.rs  request_tests.rs  resilience.rs  resource_tests.rs  responder_node_tests.rs  responder_tests.rs  (+8 more)
(+84 files in other folders)
