[workspace]
resolver = "2"
members = [
    "reticulum-core",
    "reticulum-net",
    "reticulum-std",
    "reticulum-ffi",
    "reticulum-cli",
]

# reticulum-nrf requires cross-compilation (thumbv7em-none-eabihf) and
# cannot build with --workspace on the host.
# Build with: cargo build -p reticulum-nrf --target thumbv7em-none-eabihf
exclude = ["reticulum-nrf"]

[workspace.package]
version = "0.5.7"
edition = "2021"
authors = ["Lew Palm"]
license = "MIT"
repository = "https://codeberg.org/Lew_Palm/leviculum"
description = "Rust implementation of the Reticulum network stack"

[workspace.dependencies]
# Core crypto dependencies (no_std compatible)
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
hkdf = { version = "0.12", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

# std dependencies
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
toml = "0.8"
thiserror = "2"
bytes = "1"

# Compression (no_std compatible)
libbz2-rs-sys = { version = "0.2", default-features = false, features = ["rust-allocator"] }

# FFI
libc = "0.2"

# Testing
proptest = "1"
