[package]
name = "leviculum-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C-API/FFI bindings for leviculum"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
leviculum-core = { path = "../leviculum-core", default-features = true }
leviculum-std = { path = "../leviculum-std" }
libc.workspace = true
tokio.workspace = true

[build-dependencies]
cbindgen = "0.27"
