[package]
name = "reticulum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line tools for reticulum"

[features]
serial = ["reticulum-std/serial"]

[[bin]]
name = "lnsd"
path = "src/lnsd.rs"

[[bin]]
name = "lns"
path = "src/lns.rs"

[[bin]]
name = "lncp"
path = "src/lncp.rs"

[[bin]]
name = "auto-crossmachine-test"
path = "src/bin/auto_crossmachine_test.rs"

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = true }
reticulum-std = { path = "../reticulum-std" }
tokio.workspace = true
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
rand_core.workspace = true
rmpv.workspace = true
sha2.workspace = true
serde_json = "1"
tempfile = "3"
