[package]
name = "reticulum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
description = "Reticulum network stack daemon (lnsd) and client tools (lns, lncp)"

[[bin]]
name = "lnsd"
path = "src/lnsd.rs"

[[bin]]
name = "lns"
path = "src/lns.rs"

[[bin]]
name = "lncp"
path = "src/lncp.rs"

[[bin]]
name = "auto-crossmachine-test"
path = "src/bin/auto_crossmachine_test.rs"

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = true }
reticulum-std = { path = "../reticulum-std" }
tokio.workspace = true
tracing = { workspace = true, features = ["std"] }
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
rand_core.workspace = true
rmpv.workspace = true
sha2.workspace = true
serde_json = "1"
tempfile = "3"

# `cargo deb -p reticulum-cli --target x86_64-unknown-linux-musl`
# builds a .deb whose binaries are statically linked and therefore
# run on any Debian ≥ 9 / Ubuntu ≥ 16.04 regardless of host glibc.
# See packaging/debian/ for the systemd unit, default config, and
# maintainer scripts.
[package.metadata.deb]
name = "leviculum"
maintainer = "Lew Palm <lp@lew-palm.de>"
copyright = "2025, Lew Palm"
license-file = ["../LICENSE", "0"]
extended-description = """\
Leviculum is a Rust implementation of the Reticulum network stack,
wire-compatible with the Python reference implementation.

This package installs three binaries:
  lnsd — the Reticulum daemon (drop-in replacement for Python rnsd)
  lns  — the client CLI (status, path, probe, …)
  lncp — the file-transfer tool (drop-in for rncp)

lnsd is configured as a systemd service running under a dedicated
'leviculum' user, with its config directory at /etc/reticulum. Python
Reticulum clients (rnstatus, rncp, Sideband, Nomadnet) detect this
directory automatically via their standard /etc/reticulum lookup
and connect to the shared-instance socket without extra flags.
"""
section = "net"
priority = "optional"
# The binaries are musl-static, so they have no NEEDED shared-library
# deps for cargo-deb's `$auto` to discover. Declaring `$auto` here
# would just emit a warning per binary on every build. adduser is the
# only real runtime dependency (postinst calls it to create the
# leviculum system user).
depends = "adduser"
assets = [
    # cargo-deb only recognises "target/release/..." exactly as a Cargo
    # target path and auto-substitutes the --target triple into it.
    # Any prefix (e.g. "../") disables the rewrite and makes cargo-deb
    # read the literal path, which silently picks up stale non-musl
    # builds. Always use this form.
    ["target/release/lnsd", "usr/bin/", "755"],
    ["target/release/lns", "usr/bin/", "755"],
    ["target/release/lncp", "usr/bin/", "755"],
    ["../packaging/debian/config", "etc/reticulum/config", "644"],
    ["../packaging/debian/setup-user-config.sh", "usr/share/leviculum/setup-user-config.sh", "755"],
    ["../README.md", "usr/share/doc/leviculum/README.md", "644"],
    ["../CHANGELOG.md", "usr/share/doc/leviculum/CHANGELOG.md", "644"],
]
maintainer-scripts = "../packaging/debian/"
conf-files = ["/etc/reticulum/config"]

[package.metadata.deb.systemd-units]
unit-name = "lnsd"
unit-scripts = "../packaging/debian/"
enable = true
start = true
restart-after-upgrade = true
