[package]
name = "reticulum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for reticulum - no_std compatible"

[features]
default = []
# No std feature - reticulum-core is always no_std
compression = ["dep:libbz2-rs-sys"]

[dependencies]
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
rand_core.workspace = true
zeroize.workspace = true
tracing.workspace = true
heapless = { version = "0.8", default-features = false }
libbz2-rs-sys = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# OsRng is needed for tests (only available with getrandom feature)
rand_core = { version = "0.6", features = ["getrandom"] }
