[package]
name = "reticulum-integ"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker-based integration test framework for leviculum"

[lib]
name = "reticulum_integ"
path = "src/lib.rs"

[[bin]]
name = "reticulum-integ"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tempfile = "3"
rand = "0.8"

[dev-dependencies]
serial_test = "3"
