[package]
name = "reticulum-integ"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker-based integration test framework for leviculum"

[lib]
name = "reticulum_integ"
path = "src/lib.rs"

[[bin]]
name = "reticulum-integ"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
reticulum-core = { path = "../reticulum-core" }
tempfile = "3"
rand = "0.8"
serialport = "4"

[dev-dependencies]
serial_test = "3"
libc = "0.2"
