[package]
name = "reticulum-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared data types for Reticulum network interfaces"

[features]
default = []
std = []

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = false }
