[package]
name = "reticulum-nrf"
version = "0.4.0"
edition = "2021"
authors = ["Lew Palm"]
license = "AGPL-3.0-or-later"
description = "Reticulum firmware for nRF52840-based boards (Heltec Mesh Node T114)"

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = false }

# Embassy async runtime
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.9", features = ["nrf52840", "time-driver-rtc1", "nfc-pins-as-gpio", "gpiote"] }
embassy-time = "0.5"
embassy-sync = "0.7"
embassy-usb = "0.5"
embassy-futures = "0.1"
embassy-embedded-hal = "0.5"
embedded-hal-async = "1"

# Cortex-M support
# critical-section-single-core REMOVED: it uses cpsid/cpsie which blocks
# MPSL's high-priority radio interrupts. nrf-mpsl provides its own
# critical-section impl that masks only application-priority interrupts.
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Heap allocator for alloc
embedded-alloc = "0.7"

# Static initialization
static_cell = "2"

tracing-core = { version = "0.1", default-features = false }
rand_core = { version = "0.6", default-features = false }
heapless = { version = "0.9", default-features = false }
embedded-storage = "0.3"

# Optional baseboard peripherals (RAK19026 VC on the WisMesh Pocket V2).
# All gated behind features so the bare nRF52840 + SX1262 build (T114, or a
# RAK4631 module without the baseboard) stays unchanged.
#
# Note: only SSD1306 is wired up today. The sh1106 crate (v0.5.x) still
# pins embedded-hal 0.2.3 which would require an embedded-hal-compat shim
# against our embassy-nrf 0.9 Twim (which speaks embedded-hal 1.0 only).
# If the WisMesh Pocket V2's OLED probes as SH1106, the display task will
# log a warning and stay idle — adding SH1106 support is a separate task.
ssd1306 = { version = "0.10", default-features = false, features = ["graphics"], optional = true }
embedded-graphics = { version = "0.8", optional = true }
nmea0183 = { version = "0.6", default-features = false, optional = true }

# BLE stack — pinned to trouble's known-working combination for embassy-nrf 0.9 + bt-hci 0.8
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "df7e3b4", features = ["nrf52840", "critical-section-impl"] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "df7e3b4", features = ["nrf52840", "peripheral"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble", branch = "main", default-features = false, features = ["peripheral", "derive", "gatt", "default-packet-pool"] }

# cortex-m-rt supplies the startup runtime, panic handler, and vector
# table that the linker needs for a no_std no_main firmware image, even
# though no Rust module imports it directly. nrf-mpsl is pulled in for
# its `critical-section-impl` feature; the actual API is reached via the
# nrf-sdc re-exports.
[package.metadata.cargo-machete]
ignored = ["cortex-m-rt", "nrf-mpsl"]

# Optional baseboard peripherals on the RAK19026 VC (WisMesh Pocket V2).
# Each is independent. `rak-baseboard` is the convenience aggregate built
# by the `flash-rak4631-pocket` recipe.
[features]
default = []
display = ["dep:ssd1306", "dep:embedded-graphics"]
gnss = ["dep:nmea0183"]
battery = []
rak-baseboard = ["display", "gnss", "battery"]

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization across all crates
codegen-units = 1    # single codegen unit for maximum LTO
strip = "symbols"    # strip debug symbols from binary

# Firmware binaries
[[bin]]
name = "t114"
path = "src/bin/t114.rs"

[[bin]]
name = "rak4631"
path = "src/bin/rak4631.rs"
