[package]
name = "reticulum-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KISS-aware serial proxy for LoRa fault injection testing"

[lib]
name = "lora_proxy"
path = "src/lib.rs"

[[bin]]
name = "lora-proxy"
path = "src/main.rs"

[dependencies]
reticulum-core = { path = "../reticulum-core" }
tokio = { workspace = true }
tokio-serial = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
