[package]
name = "reticulum-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standard library extensions for reticulum - networking, file I/O, async runtime"

[features]
default = ["compression"]
serial = ["dep:tokio-serial"]
# Use std bzip2 crate (streaming API, more features)
compression = ["dep:bzip2"]
# Use no_std compatible compression from reticulum-core (buffer-to-buffer API)
compression-nostd = ["reticulum-core/compression"]

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = true }
rand_core = { version = "0.6", features = ["std", "getrandom"] }

tokio.workspace = true
tokio-serial = { workspace = true, optional = true }
tracing.workspace = true
serde.workspace = true
rmp-serde.workspace = true
toml.workspace = true
thiserror.workspace = true
bytes.workspace = true
bzip2 = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
serde_json = "1.0"
hex = "0.4"
